--- a/styles/Sass/Blocks/header.scss
+++ b/styles/Sass/Blocks/header.scss
@@ -1,10 +1,6 @@
-body, html {
-    margin: 0;
-    padding: 0;
-    height: 100%;
-    background: #252525;
-}
 .header {
+    z-index: 10;
+    position: absolute;
     top: 0;
     width: 100%;
     height: 70px;
@@ -24,7 +20,6 @@ body, html {
     &__contacts {
         width: 50%;
         display: flex;
-        flex: 1 0 1;
         align-items: center;
         justify-content: space-around;
         text-transform: uppercase;
@@ -34,7 +29,6 @@ body, html {
         color: rgba($color: #fff, $alpha: .5);
     }
     &__contact {
-        // width: 50%;
         & a, span {
             font-family: Roboto;
             font-weight: medium;
@@ -79,7 +73,6 @@ body, html {
 }
 
 .burger {
-    // flex: 0 0 200px;
     width: 70px;
     height: 70px;
     position: relative;
