--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -1,11 +1,6 @@
-body, html {
-  margin: 0;
-  padding: 0;
-  height: 100%;
-  background: #252525;
-}
-
 .header {
+  z-index: 10;
+  position: absolute;
   top: 0;
   width: 100%;
   height: 70px;
@@ -34,9 +29,6 @@ body, html {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-flex: 1;
-      -ms-flex: 1 0 1;
-          flex: 1 0 1;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -128,6 +120,178 @@ body, html {
   background: #ed8031;
 }
 
+.main {
+  height: 100%;
+}
+
+.aside {
+  position: absolute;
+  top: 0;
+  padding-top: 70px;
+  z-index: 5;
+  background: #303030;
+  height: 100%;
+  width: 70px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+.aside__decoration {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 0 0px;
+          flex: 1 0 0;
+  width: 50%;
+  background: url(../../../src/icons/decoration/lines-lite.svg) center no-repeat;
+}
+.aside__soc-list {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 0 0px;
+          flex: 1 0 0;
+}
+.aside__soc-item {
+  width: 40px;
+  height: 40px;
+  opacity: 0.3;
+  -webkit-transition: 0.5s all ease 0s;
+  transition: 0.5s all ease 0s;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+}
+.aside__soc-item:not(:last-child) {
+  border-bottom: none;
+}
+.aside__soc-item:hover {
+  opacity: 1;
+  border: none;
+  background: #ed8031;
+}
+.aside__soc-link {
+  width: 100%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+.aside__soc-img {
+  width: 15px;
+  height: auto;
+}
+.aside__share-icon {
+  width: 70px;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 70px;
+          flex: 0 0 70px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background: #ed8031;
+}
+.aside__share-icon img {
+  width: 12px;
+  height: 12px;
+}
+
+.slider {
+  width: 100%;
+  height: 100%;
+  padding-left: 70px;
+  overflow: hidden;
+  position: relative;
+}
+.slider__bottom {
+  position: absolute;
+  bottom: 0;
+  height: 70px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: calc(75% - 70px);
+  z-index: 5;
+}
+.slider__share-items {
+  background: #303030;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 auto;
+          flex: 0 1 auto;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  border-right: 3px solid #ed8031;
+}
+.slider__share-item {
+  width: 70px;
+  height: 70px;
+  border-top: none;
+  border-bottom: none;
+}
+.slider__pagination {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 140px;
+          flex: 0 0 140px;
+}
+.slider__scrollbar {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 0 0px;
+          flex: 1 0 0;
+}
+.slider__navigation {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 auto;
+          flex: 0 0 auto;
+}
+
+.swiper-img {
+  width: 75%;
+  height: 100%;
+  padding-top: 70px;
+  overflow: hidden;
+  position: relative;
+}
+.swiper-img__slide {
+  height: 100%;
+  overflow: hidden;
+}
+.swiper-img__slide::before {
+  content: "";
+  width: 100%;
+  height: 100%;
+  z-index: 2;
+  position: absolute;
+  background: rgba(0, 0, 0, 0.3);
+}
+.swiper-img__background {
+  height: 100%;
+  background: center/cover;
+}
+
 *,
 *::before,
 *::after {
@@ -167,4 +331,5 @@ body {
   color: #000;
   height: 100%;
   line-height: 1;
+  background: #3c3c3c;
 }
