--- a/styles/Sass/Blocks/main-section.scss
+++ b/styles/Sass/Blocks/main-section.scss
@@ -3,6 +3,7 @@
 }
 
 .aside {
+    // стили для боковой панели
     position: absolute;
     top: 0;
     padding-top: 70px;
@@ -15,11 +16,13 @@
     flex-direction: column;
     justify-content: center;
     &__decoration {
+        // декоративные полоски
         flex: 1 0 0;  
         width: 50%;
         background: url(../../../src/icons/decoration/lines-lite.svg) center no-repeat;
     }
     &__soc-list {
+        // список социальных сетей
         flex: 1 0 0;
     }
     &__soc-item {
@@ -38,6 +41,7 @@
         }
     }
     &__soc-link {
+        // ссылка на соц. сеть
         width: 100%;
         height: 100%;
         display: flex;
