--- a/styles/Sass/Blocks/slider.scss
+++ b/styles/Sass/Blocks/slider.scss
@@ -36,29 +36,103 @@
         flex: 0 0 auto;
     }
 }
-
 .swiper-img {
     width: 75%;
     height: 100%;
     padding-top: 70px;
     overflow: hidden;
     position: relative;
-
     &__slide {
         height: 100%;
         overflow: hidden;
         &::before {
+            // затемнение для слайдов с изображениями 
             content: '';
             width: 100%;
             height: 100%;
             z-index: 2;
             position: absolute;
-            background: rgba($color: #000000, $alpha: .3);
+            background: rgba($color: #000000, $alpha: .5);
         }
-
     }
     &__background {
+        // класс для выравнивания изображений в слайдах
+        // картинки в слайдах сделаны через bg, т.к. используется параллакс
         height: 100%;
         background: center/cover;
+    }
+}
+.swiper-txt {
+    position: absolute;
+    z-index: 3;
+    width: 100%;
+    height: calc(100% - 70px);
+    &__slide {
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+    }
+    &__content {
+        color: #fff;
+        text-align: right;
+        padding-right: 22%;
+    }
+    &__heading {
+        max-width: 780px;
+        font-family: Oswald;
+        font-size: 60px;
+        font-weight: bold;
+        line-height: 120%;
+        text-transform: uppercase;
+        float: right;
+        margin-bottom: 20px;
+        span {
+            color: #ed8031;
+            white-space: nowrap;
+        }
+    }
+    &__desc {
+        font-family: Raleway;
+        font-size: 13px;
+        font-weight: 600;
+        line-height: 170%;
+        max-width: 500px;
+        float: right;
+        margin-bottom: 20px;
+    }
+    &__button {
+        float: right;
+        clear: both;
+    }
+}
+
+.button {
+    position: relative;
+    color: #fff;
+    background: #ed8031;
+    text-transform: uppercase;
+    font-size: 10px;
+    letter-spacing: 2px;
+    border: none;
+    display: inline-block;
+    padding: 14px 26px;
+    font-weight: 800;
+    &::before {
+        content:'';
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 0;
+        height: 100%;
+        background: rgba($color: #3c3c3c, $alpha: 1.0);
+        transition: width 0.5s ease-out;
+        // z-index: 10;
+    }
+    &:hover::before, &:focus::before {
+        width: 100%;
+    }
+    span {
+        position: relative;
+        z-index: 2;
     }
 }
