--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -285,11 +285,93 @@
   height: 100%;
   z-index: 2;
   position: absolute;
-  background: rgba(0, 0, 0, 0.3);
+  background: rgba(0, 0, 0, 0.5);
 }
 .swiper-img__background {
   height: 100%;
   background: center/cover;
+}
+
+.swiper-txt {
+  position: absolute;
+  z-index: 3;
+  width: 100%;
+  height: calc(100% - 70px);
+}
+.swiper-txt__slide {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+.swiper-txt__content {
+  color: #fff;
+  text-align: right;
+  padding-right: 22%;
+}
+.swiper-txt__heading {
+  max-width: 780px;
+  font-family: Oswald;
+  font-size: 60px;
+  font-weight: bold;
+  line-height: 120%;
+  text-transform: uppercase;
+  float: right;
+  margin-bottom: 20px;
+}
+.swiper-txt__heading span {
+  color: #ed8031;
+  white-space: nowrap;
+}
+.swiper-txt__desc {
+  font-family: Raleway;
+  font-size: 13px;
+  font-weight: 600;
+  line-height: 170%;
+  max-width: 500px;
+  float: right;
+  margin-bottom: 20px;
+}
+.swiper-txt__button {
+  float: right;
+  clear: both;
+}
+
+.button {
+  position: relative;
+  color: #fff;
+  background: #ed8031;
+  text-transform: uppercase;
+  font-size: 10px;
+  letter-spacing: 2px;
+  border: none;
+  display: inline-block;
+  padding: 14px 26px;
+  font-weight: 800;
+}
+.button::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 0;
+  height: 100%;
+  background: #3c3c3c;
+  -webkit-transition: width 0.5s ease-out;
+  transition: width 0.5s ease-out;
+}
+.button:hover::before, .button:focus::before {
+  width: 100%;
+}
+.button span {
+  position: relative;
+  z-index: 2;
 }
 
 *,
